--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ set(CMAKE_BUILD_TYPE Release)
 #set(CMAKE_CXX_STANDARD 17)
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native -mtune=native -Ofast -Wall -Wextra -Wpedantic -Wfatal-errors -Wno-language-extension-token -pthread -fPIC -ldl")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -Wall -Wextra -Wpedantic -Wfatal-errors -Wno-language-extension-token -pthread -fPIC -ldl")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -Wall -Wextra -Wpedantic -Wfatal-errors -Wno-language-extension-token -pthread -fPIC -ldl -lz")
 
 # set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -ggdb")
 
@@ -62,7 +62,7 @@ add_executable(write-sigma-hepmcs main-write-sigma-hepmcs.cpp )
 target_link_libraries(write-sigma-hepmcs pythia8 HepMC ${boost-libs} pythia)
 
 add_executable(write-BRs main-write-BRs.cpp )
-target_link_libraries(write-BRs pythia8 HepMC ${boost-libs} pythia)
+target_link_libraries(write-BRs pythia8 ${boost-libs} pythia)
 
 add_executable(write-hepmc main-write-hepmc.cpp )
 target_link_libraries(write-hepmc pythia8 HepMC ${boost-libs} pythia)
@@ -78,6 +78,12 @@ target_link_libraries(scan-hepmc pythia8 HepMC ${boost-libs} pythia)
 
 add_executable(scan-hepmcs main-scan-hepmcs.cpp )
 target_link_libraries(scan-hepmcs pythia8 HepMC ${boost-libs} pythia)
+
+add_executable(scan-lhes main-scan-lhes.cpp )
+target_link_libraries(scan-lhes pythia8 HepMC ${boost-libs} pythia)
+
+add_executable(read-lhe main-read-lhe.cpp )
+target_link_libraries(read-lhe pythia8 ${boost-libs} pythia)
 
 if(graphic)
   add_executable(Geometry geometry.cpp)
