further splits into header and source

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ include_directories("~/Development/HEPMC2/")
 LINK_DIRECTORIES("~/Development/pythia/lib")
 LINK_DIRECTORIES("~/Development/HEPMC2/build/lib/")
 
-set(graphic OFF)
+set(graphic ON)
 
 set(CMAKE_BUILD_TYPE Release)
 #set(CMAKE_CXX_STANDARD 17)
@@ -49,49 +49,51 @@ include_directories(${Boost_INCLUDE_DIR})
 set(boost-libs ${Boost_LIBRARIES})
 
 # lib
-add_library(pythia ResonanceWidths.cpp ThreeBodyWidth.cpp Sigma.cpp)
+add_library(pythia ResonanceWidths.cpp ThreeBodyWidth.cpp Sigma.cpp decay_table.cpp read-file.cpp branching_ratios.cpp)
 
 # executables
 add_executable(resonance main-resonance.cpp)
-target_link_libraries(resonance pythia8 HepMC ${boost-libs} pythia)
+target_link_libraries(resonance pythia pythia8 HepMC ${boost-libs} )
 
 add_executable(calculate-sigma main-calculate-sigma.cpp)
-target_link_libraries(calculate-sigma pythia8 HepMC ${boost-libs} pythia)
+target_link_libraries(calculate-sigma pythia pythia8 HepMC ${boost-libs} )
 
 add_executable(write-sigma-hepmc main-write-sigma-hepmc.cpp )
-target_link_libraries(write-sigma-hepmc pythia8 HepMC ${boost-libs} pythia)
+target_link_libraries(write-sigma-hepmc pythia pythia8 HepMC ${boost-libs} )
 
 add_executable(write-sigma-hepmcs main-write-sigma-hepmcs.cpp )
-target_link_libraries(write-sigma-hepmcs pythia8 HepMC ${boost-libs} pythia)
+target_link_libraries(write-sigma-hepmcs pythia pythia8 HepMC ${boost-libs} )
 
 add_executable(write-BRs main-write-BRs.cpp )
-target_link_libraries(write-BRs pythia8 ${boost-libs} pythia)
+target_link_libraries(write-BRs pythia ${boost-libs} pythia8)
 
 add_executable(write-hepmc main-write-hepmc.cpp )
-target_link_libraries(write-hepmc pythia8 HepMC ${boost-libs} pythia)
+target_link_libraries(write-hepmc pythia pythia8 HepMC ${boost-libs} )
 
 add_executable(write-hepmcs main-write-hepmcs.cpp )
-target_link_libraries(write-hepmcs pythia8 HepMC ${boost-libs} pythia)
+target_link_libraries(write-hepmcs pythia pythia8 HepMC ${boost-libs} )
 
 add_executable(read-hepmc main-read-hepmc.cpp )
-target_link_libraries(read-hepmc pythia8 HepMC ${boost-libs} pythia)
+target_link_libraries(read-hepmc pythia pythia8 HepMC ${boost-libs} )
 
 add_executable(scan-hepmc main-scan-hepmc.cpp )
-target_link_libraries(scan-hepmc pythia8 HepMC ${boost-libs} pythia)
+target_link_libraries(scan-hepmc pythia pythia8 HepMC ${boost-libs} )
 
 add_executable(scan-hepmcs main-scan-hepmcs.cpp )
-target_link_libraries(scan-hepmcs pythia8 HepMC ${boost-libs} pythia)
+target_link_libraries(scan-hepmcs pythia pythia8 HepMC ${boost-libs} )
 
 add_executable(scan-lhe main-scan-lhe.cpp )
-target_link_libraries(scan-lhe pythia8 HepMC ${boost-libs} pythia)
+target_link_libraries(scan-lhe pythia pythia8 HepMC ${boost-libs} )
 
 add_executable(scan-lhes main-scan-lhes.cpp )
-target_link_libraries(scan-lhes pythia8 HepMC ${boost-libs} pythia)
+target_link_libraries(scan-lhes pythia pythia8 HepMC ${boost-libs} )
 
 add_executable(read-lhe main-read-lhe.cpp )
 target_link_libraries(read-lhe pythia8 ${boost-libs} pythia)
 
 if(graphic)
-  add_executable(Geometry geometry.cpp)
+  add_executable(Geometry main-geometry.cpp)
   target_link_libraries(Geometry HepMC ${hepmc-libs} ${qt-libs})
+  add_executable(draw main-draw.cpp)
+  target_link_libraries(draw HepMC ${hepmc-libs} ${qt-libs} ${cgal-libs})
 endif(graphic)
