extract data from temp files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.4)
 project(HeavyNeutralLeptons)
 
 # use qt and cgal libs?
-set(graphic ON)
+set(graphic OFF)
 
 # hepmc
 include_directories("~/Development/HEPMC2/")
@@ -95,6 +95,9 @@ target_link_libraries(scan-lhes ${hnl-libs})
 
 add_executable(read-lhe main-read-lhe.cpp)
 target_link_libraries(read-lhe ${hnl-libs})
+
+add_executable(extract main-extract.cpp)
+target_link_libraries(extract ${hnl-libs})
 
 if(graphic)
   add_executable(Geometry main-geometry.cpp)
