--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,3 +112,6 @@ endif(graphic)
 
 add_executable(test-slurm test-slurm.cpp)
 target_link_libraries(test-slurm ${hnl-libs-hep})
+
+add_executable(write-lifetime main-write-lifetime.cpp)
+target_link_libraries(write-lifetime ${hnl-libs-hep})
